// Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";
package com.digitalasset.canton.version;

import "com/digitalasset/canton/v0/trace_context.proto";

// Probably not strictly needed but added for consistency
message VersionedTraceContext {
  oneof version {
    com.digitalasset.canton.v0.TraceContext v0 = 1;
  }
}
